--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ attrs==25.1.0
 babel==2.17.0
 beautifulsoup4==4.13.3
 bleach==6.2.0
+blinker==1.9.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.1.8
 comm==0.2.2
 cramjam==2.9.1
 debugpy==1.8.12
@@ -20,6 +22,8 @@ defusedxml==0.7.1
 executing==2.2.0
 fastjsonschema==2.21.1
 fastparquet==2024.11.0
+Flask==3.1.0
+flask-cors==5.0.1
 fqdn==1.5.1
 fsspec==2025.2.0
 h11==0.14.0
@@ -30,6 +34,7 @@ ipykernel==6.29.5
 ipython==8.32.0
 ipywidgets==8.1.5
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.5
 json5==0.10.0
@@ -87,6 +92,7 @@ setuptools==75.8.2
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
+SQLAlchemy==2.0.38
 stack-data==0.6.3
 terminado==0.18.1
 tinycss2==1.4.0
@@ -101,4 +107,5 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.1.3
 widgetsnbextension==4.0.13
