dockerize data downlaod and processing

--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,6 @@
 .DS_Store
 node_modules
 dist
-/data/parquet_files/*
-/data/air_quality_complete.parquet
-/data/air_quality_optimized.parquet
-/data/cleaned_air_quality.parquet
-/data/cleaned_metadata.parquet
-/data/cleaned_air_quality.parquet
+/data/processed/*
 /data/metadata.csv
-/data/merged_air_quality.parquet
-
-# Austria shapefiles
-/data/austria_shapefiles/*
-/data/austria-latest-free.shp.zip
+/data/raw/*
