--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,21 @@ services:
     container_name: data_processor
     volumes:
       - ./data:/app/data
+    depends_on:
+      - db
+
+  db:
+    image: postgis/postgis:15-3.3
+    container_name: air_quality_db
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: air_quality
+    ports:
+    - "5432:5432"
+    volumes:
+    - pg_data:/var/lib/postgresql/data
+
+volumes:
+  pg_data:
